force-app/main/default/objects/Shelter__c/fields/Number_Of_Adoptions__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Adoptions__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of adoptions in the shelter.</description>
    <label>Number Of  Adoptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>