force-app/main/default/objects/Shelter__c/fields/Time_Opened__c.field-meta.xml
<CustomField>
    <fullName>Time_Opened__c</fullName>
    <label>Time_Opened</label>
    <length>20</length>
    <type>Text</type>
</CustomField>