force-app/main/default/objects/Shelter__c/fields/Time_Opened_On_Weekend__c.field-meta.xml
<CustomField>
    <fullName>Time_Opened_On_Weekend__c</fullName>
    <label>Time_Opened_On_Weekend</label>
    <length>20</length>
    <type>Text</type>
</CustomField>